协议卸载逻辑优化